<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="274dp"
        android:layout_height="218dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="513dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/finek_final_sans" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textColor="@color/colorBackground"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/readItTogetherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_2"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:text="Email"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/telEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/tel"
        android:inputType="textPersonName"
        android:text="@string/tel"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/nomEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:text="@string/nom"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <EditText
        android:id="@+id/prenomEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        android:text="@string/prenom"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/password"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <EditText
        android:id="@+id/confPasswordEditText"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:hint="@string/conf_password"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/inscriptionButton"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:background="@drawable/button_drawable"
        android:text="@string/inscription"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/skip"
        android:textColor="@color/colorTextView"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <RadioButton
        android:id="@+id/hommeRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Homme"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <RadioButton
        android:id="@+id/femmeRadioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Femme"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <TextView
        android:id="@+id/sexeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="Sexe : "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="376dp"
        android:layout_height="57dp"
        android:text="J'ai lu et j'accepte les conditions générales d'utilisation, notamment la mention relative à la protection des données personnelles."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />


</androidx.constraintlayout.widget.ConstraintLayout>